[tool.poetry]
name = "camera-gimbal-controller"
version = "0.1.0"
description = ""
authors = ["Takahiro55555 <tkhr.corei7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
websocket-client = "^0.57.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.1"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
